fix deprecated and non effective new Integer, replace with Integer.valueOf