@@ -346,7 +346,7 @@ public class ScoreGroupType implements IChannelItem {
   		double value = 0.0;
   		PropertyType tmpProperty = this.getProperty(IDevice.OFFSET);
   		if (tmpProperty != null)
-  			value = new Double(tmpProperty.getValue()).doubleValue();
+  			value = Double.valueOf(tmpProperty.getValue()).doubleValue();
 
   		return value;
   	}
@@ -373,7 +373,7 @@ public class ScoreGroupType implements IChannelItem {
   		double value = 0.0;
   		PropertyType tmpProperty = this.getProperty(IDevice.REDUCTION);
   		if (tmpProperty != null)
-  			value = new Double(tmpProperty.getValue()).doubleValue();
+  			value = Double.valueOf(tmpProperty.getValue()).doubleValue();
 
   		return value;
   	}
@@ -400,7 +400,7 @@ public class ScoreGroupType implements IChannelItem {
   		double value = 1.0;
   		PropertyType tmpProperty = getProperty(IDevice.FACTOR);
   		if (tmpProperty != null)
-  			value = new Double(tmpProperty.getValue()).doubleValue();
+  			value = Double.valueOf(tmpProperty.getValue()).doubleValue();
 
   		return value;
   	}
